media/css/firefox/ios.less
/* ... */
// Privacy
.section-privacy {
    background: #005189;
    color: #bee1f5;
    padding: 80px 0 40px;

    h2 {
        .font-size(48px);
        line-height: 1.2;
        text-shadow: none;
        text-align: center;
        margin: 0 auto 16px;
        color: #fff;

        @media (max-width: @breakDesktop) and (min-width: (@breakTablet + 1)) {
            .font-size(40px);
        }

        @media only screen and (max-width: @breakTablet) {
            .font-size(30px);
        }
    }

    .lead {
        .open-sans-light();
        .font-size(24px);
        line-height: 1.4;
        text-align: center;
        margin: 0 auto (@baseLine * 3);

        @media (max-width: @breakDesktop) and (min-width: (@breakTablet + 1)) {
            .font-size(22px);
        }

        @media only screen and (max-width: @breakTablet) {
            .font-size(20px);
            margin-bottom: 40px;
        }
    }

    ul {
        width: 80%;
        margin: 0 auto;

        @media (max-width: @breakDesktop) {
            width: auto;
        }
    }

    li {
        float: left;
        list-style-type: none;
        margin: 0 5% (@baseLine * 2);
        width: 40%;
        padding-top: 160px;
        text-align: center;
        position: relative;
        .font-size(@largeFontSize);

        &:before {
            content: '';
            display: block;
            width: 140px;
            height: 140px;
            position: absolute;
            left: 50%;
            top: 0;
            margin-left: -70px;
            .at2x('/media/img/firefox/ios/privacy-sprite.png', 140px, 300px);
            background-repeat: no-repeat;
        }

        @media only screen and (max-width: @breakTablet) {
            float: none;
            width: auto;
            margin: 0 auto (@baseLine * 2);
        }

        h3 {
            font-weight: normal;
            .font-size(22px);
            text-shadow: none;
            color: #fff;
        }

        a:link,
        a:visited,
        a:hover,
        a:focus {
            color: #71c4ea;
            .trailing-arrow;
        }
    }

    #clear-history:before {
        background-position: 0 0;
    }

    #private-browsing:before {
        background-position: 0 -150px;
    }
}


// Send to Device Widget
#send-to-device,
.send-to.button.green {
    display: none;
}

// Hide app store button for locales that get the send-to-device widget
.js .show-widget {
    .dl-button,
    .appstore-badge {
        display: none;
    }
    .send-to.button.green  {
        display: inline;
    }
    #send-to-device {
        display: block;
    }
}

// Always show app store buttons for iOS users
.ios .show-widget {
    .dl-button,
    .appstore-badge {
        display: block;
    }
    .send-to-device,
    .send-to.button.green  {
        display: none;
    }
}

.fxfamilynav-cta-wrapper .dl-button {
    text-align: center;
    margin-top: 6px;
}

.fxfamilynav-cta-wrapper .send-to {
    padding: 7px (@baseLine / 2);
    .font-size(@smallFontSize);
    color: #fff;
    margin: 0;
    text-align: center;
}


// Sync instructions for iOS users
#sync-instructions {
    display: none;
    width: 220px;
    padding: 15px;
    background: #fff;
    border: 1px solid #ccc;
    border-radius: 6px;
    position: absolute;
    top: 10px;
    right: 5px;
    z-index: 101;
    box-shadow: 1px 2px 5px rgba(0, 0, 0, .2);
    color: @textColorPrimary;

    &:after,
    &:before {
        bottom: 100%;
        right: 10px;
        border: solid transparent;
        content: '';
        height: 0;
        width: 0;
        position: absolute;
        pointer-events: none;
    }

    &:after {
        border-color: rgba(255, 255, 255, 0);
        border-bottom-color: #fff;
        border-width: 10px;
        margin-left: -10px;
    }
    &:before {
        border-color: rgba(204, 204, 204, 0);
        border-bottom-color: #ccc;
        border-width: 11px;
        margin-left: -11px;
    }

    h4 {
        .font-size(18px);
        color: @textColorSecondary;
    }

    b {
        display: inline-block;
        text-indent: 120%;
        overflow: hidden;
        margin-bottom: -.15em;
        width: 14px;
        height: 14px;
        background: #fff;
        border: 1px solid @textColorSecondary;
        border-radius: 4px;
    }

    img {
        vertical-align: middle;
    }

    p:last-child {
        margin: 1em 0 0;
    }

    .btn-dismiss {
        background: transparent;
        border: 0;
        padding: 0;
        color: @linkBlue;
        font-size: inherit;
        font-family: inherit;
    }
}

#modal #sync-instructions {
    display: block;
}



// Footer
#colophon {
    background-color: @mozIDBlue;
    color: #fff;

    a:link,
    a:visited {
        color: #bee1f5;
    }

    a:hover,
    a:focus,
    a:active {
        color: #fff;
    }

    .logo a {
        background-repeat: no-repeat;
        .at2x('/media/img/sandstone/footer-mozilla-white.png', 93px, 24px);
    }
}

// For small high-res screens
@media only screen and (max-width: @breakTablet) and (-webkit-min-device-pixel-ratio: 1.5),
       only screen and (max-width: @breakTablet) and (min-resolution: 1.5dppx),
       only screen and (max-width: @breakTablet) and (min-resolution: 144dpi) {

    .section-intro .container {
        background-image: url(/media/img/firefox/ios/firefox-iphone-white-crop-high-res.png);
        .background-size(210px 290px);
    }
}

// Bug 1224103
html[lang=ja] {
    #privacy ul p {
        text-align: left;
    }
}

